## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

libinclusive_includedir = $(pkgincludedir)

libinclusive_include_DATA = \
	BackgroundIO.h\
	BackgroundModel.h\
	Distribution.h\
	FastaIO.h\
  GFFWriter.h\
	Instance.h\
	InstanceMap.h\
  MaskVector.h\
	MotifSamplerRun.h\
	PriorMotifSamplerRun.h\
	PWM.h\
	PWMIO.h\
	RandomNumber.h\
	SequenceObject.h\
  SequenceComputation.h\
	SpacerPWM.h\
	inclusive.h\
	utilities.h

EXTRA_DIST = $(libinclusive_include_DATA)
