## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I../include

AM_CXXFLAGS =\
	 -Wall -Wimplicit -Wreturn-type -Wunused -Wswitch -Wcomment -Wuninitialized\
   -Wparentheses -Wpointer-arith -Wmissing-prototypes\
   -static -g -p

lib_LTLIBRARIES = libinclusive.la

libinclusive_la_SOURCES = \
	BackgroundIO.cpp\
	BackgroundModel.cpp\
  BlockSamplerRun.cpp\
	Distribution.cpp\
	FastaIO.cpp\
  GFFWriter.cpp\
	Instance.cpp\
	InstanceMap.cpp\
  MaskVector.cpp\
  MotifSamplerRun.cpp\
  PriorMotifSamplerRun.cpp\
	PWMIO.cpp\
	PWM.cpp\
	RandomNumber.cpp\
	SequenceObject.cpp\
  SequenceComputation.cpp\
	utilities.cpp

libinclusive_la_LDFLAGS = 

libinclusive_la_LIBADD =
