## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =\
	 -I../include

AM_CXXFLAGS =\
	 -Wall\
	 -g -pg

lib_LTLIBRARIES = libinclusive.la

libinclusive_la_SOURCES = \
	BackgroundIO.cpp\
	BackgroundModel.cpp\
	Distribution.cpp\
	FastaIO.cpp\
	GFFWriter.cpp\
	Instance.cpp\
	InstanceMap.cpp\
	MaskVector.cpp\
	MotifSamplerRun.cpp\
	PWM.cpp\
	PWMIO.cpp\
	RandomNumber.cpp\
	SequenceComputation.cpp\
	SequenceObject.cpp\
	utilities.cpp

libinclusive_la_LIBADD =

libinclusive_la_LDFLAGS =
